--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ slovnet==0.6.0
 sortedcontainers==2.4.0
 yargy==0.16.0
 aiogram==3.0
-scikit-learn ==1.3.1
+scikit-learn==1.3.1
 requests==2.31.0
 asyncio==3.4.3
 python-dotenv==1.0.0
@@ -29,3 +29,4 @@ scipy~=1.11.3
 xgboost~=2.0.3
 catboost~=1.2.2
 SQLAlchemy~=2.0.22
+optuna~=3.5.0
