fixed local env

--- a/local_env/docker-compose.yml
+++ b/local_env/docker-compose.yml
@@ -1,12 +1,13 @@
----
-version: "3.9"
+
 services:
   postgres:
+    container_name: hse_analyze
     image: postgres
     environment:
-      POSTGRES_PASSWORD: hse_medical
-      POSTGRES_USER: 123456
-    volumes:
-      - ./sql:/docker-entrypoint-initdb.d
+      POSTGRES_PASSWORD: 123456
+      POSTGRES_USER: hse_medical
+      POSTGRES_DB: hse_medical
+#    volumes:
+#      - ./sql:/docker-entrypoint-initdb.d
     ports:
       - 5450:5432
