--- a/local_env/docker-compose.yml
+++ b/local_env/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       POSTGRES_PASSWORD: 123456
       POSTGRES_USER: hse_medical
       POSTGRES_DB: hse_medical
-#    volumes:
-#      - ./sql:/docker-entrypoint-initdb.d
+    volumes:
+      - ./sql:/docker-entrypoint-initdb.d
     ports:
       - 5450:5432
