--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ slovnet = "0.6.0"
 sortedcontainers = "2.4.0"
 yargy = "0.16.0"
 aiogram = "3.0"
+torch="2.3.1"
 scikit-learn = "1.3.1"
 requests = "2.31.0"
 asyncio = "3.4.3"
