--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,8 +20,10 @@ razdel = "0.5.0"
 slovnet = "0.6.0"
 sortedcontainers = "2.4.0"
 yargy = "0.16.0"
-aiogram = "3.0"
-torch="2.3.1"
+aiogram = "3.7.0"
+torch="2.3.0"
+torchvision="0.18.0"
+torchaudio="2.3.0"
 scikit-learn = "1.3.1"
 requests = "2.31.0"
 asyncio = "3.4.3"
@@ -36,7 +38,7 @@ matplotlib = "~=3.8.2"
 scikit-image = "~=0.22.0"
 boto3 = "~=1.28.80"
 opencv-python = "~=4.8.1.78"
-pillow = "~=9.0.1"
+pillow = "10.3.0"
 SciPy = "~=1.11.3"
 xgboost = "~=2.0.3"
 catboost = "~=1.2.2"
